fixed redirection links and changed to relative paths of all other pages

--- a/admin/auth/Adminlogin.html
+++ b/admin/auth/Adminlogin.html
@@ -6,15 +6,22 @@
     <title>VogueCart - Partner Sign In</title>
     <link
       rel="shortcut icon"
-      href="../../images/VOUGECART_light.png"
+      href="B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"
       type="image/x-icon"
     />
-    <base href="/">
+    <base href="/" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./Adminlogin.css" />
+    <link
+      rel="stylesheet"
+      href="B42_WEB_003_Web-Wizards/admin/auth/Adminlogin.css"
+    />
+    <link
+      rel="stylesheet"
+      href="/B42_WEB_003_Web-Wizards/css/font.module.css"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
@@ -23,7 +30,10 @@
   <body>
     <div class="login-container">
       <div id="logo">
-        <img src="../../images/VOUGECART_dark.png" alt="Logo" />
+        <img
+          src="B42_WEB_003_Web-Wizards/images/VOUGECART_dark.png"
+          alt="Logo"
+        />
       </div>
       <h4>Welcome Back</h4>
       <p>Please enter your details to sign in</p>
@@ -67,10 +77,14 @@
         <button type="submit">Sign in</button>
         <p>
           Don't have an account yet?
-          <a href="./AdminRegister.html" class="signup-link">Sign up</a>
+          <a
+            href="B42_WEB_003_Web-Wizards/admin/auth/AdminRegister.html"
+            class="signup-link"
+            >Sign up</a
+          >
         </p>
       </form>
     </div>
-    <script src="./js/Adminlogin.js"></script>
+    <script src="B42_WEB_003_Web-Wizards/admin/auth/js/Adminlogin.js"></script>
   </body>
 </html>
