--- a/admin/dashboard/dashboard.html
+++ b/admin/dashboard/dashboard.html
@@ -6,12 +6,12 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="../../images/VOUGECART_light.png"
+      href="B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"
     />
 
     <base href="/" />
     <title>Responsiive Admin Dashboard | CodingLab</title>
-    <link rel="stylesheet" href="./style.module.css" />
+    <link rel="stylesheet" href="B42_WEB_003_Web-Wizards/admin/dashboard/style.module.css" />
     <!-- Boxicons CDN Link -->
     <link
       href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
@@ -22,10 +22,10 @@
   <body>
     <div class="sidebar">
       <div class="logo-details">
-        <i class="../../images/VOUGECART_light.png"></i>
+        <i class="B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"></i>
 
         <img
-          src="../../images/VOUGECART_light.png"
+          src="B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"
           alt="Dashboard Logo"
           style="width: 50px; height: auto"
         />
