--- a/admin/orders/OrdersManage.html
+++ b/admin/orders/OrdersManage.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <link
-    rel="icon"
-    type="image/x-icon"
-    href="../../images/VOUGECART_light.png"
+      rel="icon"
+      type="image/x-icon"
+      href="B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"
     />
-    <base href="/">
+    <base href="/" />
     <title>VOUGECART - Admin Order page</title>
     <link rel="stylesheet" href="./css/OrdersManage.css" />
     <link rel="stylesheet" href="./style.module.css" />
@@ -26,7 +26,7 @@
         <i class="VOUGECART.png"></i>
 
         <img
-          src="../../images/VOUGECART_light.png"
+          src="B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"
           alt="Dashboard Logo"
           style="width: 50px; height: auto"
         />
@@ -35,7 +35,7 @@
       <ul class="nav-links">
         <li>
           <a
-            href="../dashboard/dashboard.html"
+            href="B42_WEB_003_Web-Wizards/admin/dashboard/dashboard.html"
             class="active"
           >
             <i class="bx bx-grid-alt"></i>
