--- a/admin/orders/orders.html
+++ b/admin/orders/orders.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-    <link rel="stylesheet" href="./Orderlist.css" />
+    <link rel="stylesheet" href="B42_WEB_003_Web-Wizards/admin/orders/css/Orderlist.css" />
   </head>
   <body>
     <div class="sidebar" id="sidebar">
@@ -179,6 +179,6 @@
       </table>
     </div>
 
-    <script src="./Orderlist.js"></script>
+    <script src="B42_WEB_003_Web-Wizards/admin/orders/Orderlist.js"></script>
   </body>
 </html>
