fixed redirection links and changed to relative paths of all other pages

--- a/admin/orders/OrdersManage.html
+++ b/admin/orders/OrdersManage.html
@@ -10,9 +10,9 @@
     />
     <base href="/" />
     <title>VOUGECART - Admin Order page</title>
-    <link rel="stylesheet" href="./css/OrdersManage.css" />
-    <link rel="stylesheet" href="./style.module.css" />
-    <link rel="stylesheet" href="../../css/font.module.css" />
+    <link rel="stylesheet" href="B42_WEB_003_Web-Wizards/admin/orders/css/OrdersManage.css" />
+    <link rel="stylesheet" href="B42_WEB_003_Web-Wizards/admin/dashboard/style.module.css" />
+    <link rel="stylesheet" href="B42_WEB_003_Web-Wizards/css/font.module.css" />
     <!-- Boxicons CDN Link -->
     <link
       href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
