--- a/admin/dashboard/dashboard.html
+++ b/admin/dashboard/dashboard.html
@@ -35,52 +35,12 @@
             <span class="links_name">Product</span>
           </a>
         </li>
-        <li>
-          <a href="#">
-            <i class="bx bx-list-ul"></i>
-            <span class="links_name">Order list</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="bx bx-pie-chart-alt-2"></i>
-            <span class="links_name">Analytics</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="bx bx-coin-stack"></i>
-            <span class="links_name">Stock</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="bx bx-book-alt"></i>
-            <span class="links_name">Total order</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="bx bx-user"></i>
-            <span class="links_name">Team</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="bx bx-message"></i>
-            <span class="links_name">Messages</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="bx bx-heart"></i>
-            <span class="links_name">Favrorites</span>
-          </a>
-        </li>
-        <li>
+        
+        
+       <li>
           <a href="#">
             <i class="bx bx-cog"></i>
-            <span class="links_name">Setting</span>
+            <span class="links_name">Profile</span>
           </a>
         </li>
         <li class="log_out">
