admin pages update

--- a/admin/products/product_table.html
+++ b/admin/products/product_table.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Products Table</h1>
         <div class="toolbar">
-            <a href="B42_WEB_003_Web-Wizards/admin/products/products_form.html" class="add-product-btn">Add Product</a>
+            <a href="products_form.html" class="add-product-btn">Add Product</a>
             <input type="text" id="searchInput" placeholder="Search products by any field...">
             <select id="itemsPerPage">
                 <option value="5">5</option>
