--- a/users/products/products.html
+++ b/users/products/products.html
@@ -267,7 +267,7 @@
       </div>
       <hr />
       <div class="copyright">
-        <p>&copy; 2025 VagueCart Inc. All rights reserved.</p>
+        <p>&copy; 2025 VogueCart Inc. All rights reserved.</p>
         <div class="footer-socials">
           <a href="#"><i class="ri-facebook-circle-fill"></i></a>
           <a href="#"><i class="ri-twitter-fill"></i></a>
