fixed ui of admin orders page

--- a/admin/orders/OrdersManage.html
+++ b/admin/orders/OrdersManage.html
@@ -342,11 +342,11 @@
             description,
           })
         );
-        window.location.href = "orderdetail.html";
+        window.location.href = "B42_WEB_003_Web-Wizards/admin/orders/orderdetail.html";
       }
 
       function viewDetail(orderId) {
-        window.location.href = `/B42_WEB_003_Web-Wizards/admin/orders/orderdetail.html?orderId=${orderId}`;
+        window.location.href = `B42_WEB_003_Web-Wizards/admin/orders/orderdetail.html?orderId=${orderId}`;
       }
 
       document.addEventListener("DOMContentLoaded", fetchOrders);
