renamed the file name and added page title

--- a/admin/orders/Orderslist.html
+++ b/admin/orders/Orderslist.html
@@ -9,7 +9,7 @@
       href="B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"
     />
     <base href="/" />
-    <title>VOUGECART - Admin Order page</title>
+    <title>VougeCart - Admin Order page</title>
     <link
       rel="stylesheet"
       href="B42_WEB_003_Web-Wizards/admin/orders/css/OrdersManage.css"
