CRUD operation on cart and payment page, fixed the UI of cart and payment

--- a/users/cartAndpayment/cartAndPayment.html
+++ b/users/cartAndpayment/cartAndPayment.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shopping Cart and Payment</title>
+    <title>VogueCart - cart and payment</title>
     <base href="/" />
     <link rel="stylesheet" href="B42_WEB_003_Web-Wizards/css/navbar.module.css" />
     <link rel="stylesheet" href="B42_WEB_003_Web-Wizards/users/cartAndpayment/css/cartAndPayment.css">
