--- a/admin/dashboard/dashboard.html
+++ b/admin/dashboard/dashboard.html
@@ -7,10 +7,21 @@
       type="image/x-icon"
       href="B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"
     />
-
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
     <base href="/" />
-    <title>Responsiive Admin Dashboard | CodingLab</title>
-    <link rel="stylesheet" href="B42_WEB_003_Web-Wizards/admin/dashboard/style.module.css" />
+    <title>VougeCart - Admin Dashboard</title>
+    <link rel="stylesheet" href="B42_WEB_003_Web-Wizards/css/font.module.css" />
+    <link
+      rel="stylesheet"
+      href="B42_WEB_003_Web-Wizards/admin/css/admin.navbar.module.css"
+    />
+    <link
+      rel="stylesheet"
+      href="B42_WEB_003_Web-Wizards/admin/dashboard/css/style.module.css"
+    />
     <!-- Boxicons CDN Link -->
     <link
       href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
@@ -19,99 +30,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <div class="sidebar">
+    <header class="sidebar">
       <div class="logo-details">
-        <i class="B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"></i>
-
         <img
           src="B42_WEB_003_Web-Wizards/images/VOUGECART_light.png"
           alt="Dashboard Logo"
-          style="width: 50px; height: auto"
         />
         <p style="color: white">VOUGECART</p>
       </div>
       <ul class="nav-links">
         <li>
-          <a href="#" class="active">
-            <i class="bx bx-grid-alt"></i>
+          <a
+            href="B42_WEB_003_Web-Wizards/admin/dashboard/dashboard.html"
+            class="active"
+          >
+            <i class="ri-dashboard-fill"></i>
             <span class="links_name">Dashboard</span>
           </a>
         </li>
         <li>
-          <a href="#">
-            <i class="bx bx-box"></i>
+          <a href="B42_WEB_003_Web-Wizards/admin/products/products.html">
+            <i class="ri-archive-line"></i>
             <span class="links_name">Product</span>
           </a>
         </li>
         <li>
-          <a href="#">
-            <i class="bx bx-list-ul"></i>
+          <a href="B42_WEB_003_Web-Wizards/admin/orders/Orderslist.html">
+            <i class="ri-list-unordered"></i>
             <span class="links_name">Order list</span>
           </a>
         </li>
         <li>
-          <a href="#">
-            <i class="bx bx-pie-chart-alt-2"></i>
-            <span class="links_name">Analytics</span>
+          <a href="B42_WEB_003_Web-Wizards/admin/profile/profile.html">
+            <i class="ri-user-3-line"></i>
+            <span class="links_name">Profile</span>
           </a>
         </li>
-        <li>
-          <a href="#">
-            <i class="bx bx-coin-stack"></i>
-            <span class="links_name">Stock</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="bx bx-book-alt"></i>
-            <span class="links_name">Total order</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="bx bx-user"></i>
-            <span class="links_name">Team</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="bx bx-message"></i>
-            <span class="links_name">Messages</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="bx bx-heart"></i>
-            <span class="links_name">Favrorites</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <i class="bx bx-cog"></i>
-            <span class="links_name">Setting</span>
-          </a>
-        </li>
-        <li class="log_out">
-          <a href="#">
-            <i class="bx bx-log-out"></i>
+        <li id="log_out">
+          <a href="B42_WEB_003_Web-Wizards/admin/auth/Adminlogin.html">
+            <i class="ri-logout-circle-line"></i>
             <span class="links_name">Log out</span>
           </a>
         </li>
       </ul>
-    </div>
+    </header>
     <section class="home-section">
       <nav>
         <div class="sidebar-button">
-          <i class="bx bx-menu sidebarBtn"></i>
+          <i class="ri-menu-fill sidebarBtn"></i>
           <span class="dashboard">Dashboard</span>
         </div>
-        <div class="search-box">
-          <input type="text" placeholder="Search..." />
-          <i class="bx bx-search"></i>
-        </div>
         <div class="profile-details">
-          <img src="./images/profile.jpg" alt="" />
-          <span class="admin_name">Prem Shahi</span>
+          <img
+            src="https://imgs.search.brave.com/J5-KJNoclGIgO9mgbMuULm8xw_ri-hvqZYOyhc50Q64/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly90NC5m/dGNkbi5uZXQvanBn/LzAyLzE3LzM0LzY3/LzM2MF9GXzIxNzM0/Njc4Ml83WHBDVHQ4/YkxOSnF2VkFhRFpK/d3Zaam0wZXBRbWo2/ai5qcGc"
+            alt="Admin"
+          />
+          <span id="admin_name"></span>
           <i class="bx bx-chevron-down"></i>
         </div>
       </nav>
@@ -119,181 +93,61 @@
       <div class="home-content">
         <div class="overview-boxes">
           <div class="box">
+            <i class="bx bx-cart-alt cart"></i>
             <div class="right-side">
               <div class="box-topic">Total Order</div>
-              <div class="number">40,876</div>
-              <div class="indicator">
-                <i class="bx bx-up-arrow-alt"></i>
-                <span class="text">Up from yesterday</span>
-              </div>
+              <div class="number" id="total_order">0</div>
             </div>
-            <i class="bx bx-cart-alt cart"></i>
           </div>
           <div class="box">
-            <div class="right-side">
-              <div class="box-topic">Total Sales</div>
-              <div class="number">38,876</div>
-              <div class="indicator">
-                <i class="bx bx-up-arrow-alt"></i>
-                <span class="text">Up from yesterday</span>
-              </div>
-            </div>
             <i class="bx bxs-cart-add cart two"></i>
+            <div class="right-side">
+              <div class="box-topic">Total Revenue</div>
+              <div class="number" id="total_revenue">$0</div>
+            </div>
           </div>
           <div class="box">
+            <i class="bx bx-cart cart three"></i>
             <div class="right-side">
               <div class="box-topic">Today's sale</div>
-              <div class="number">$12,876</div>
-              <div class="indicator">
-                <i class="bx bx-up-arrow-alt"></i>
-                <span class="text">Up from yesterday</span>
-              </div>
+              <div class="number" id="today_sale">$0</div>
             </div>
-            <i class="bx bx-cart cart three"></i>
           </div>
           <div class="box">
+            <i class="bx bxs-cart-download cart four"></i>
             <div class="right-side">
               <div class="box-topic">Last week sale</div>
-              <div class="number">11,086</div>
-              <div class="indicator">
-                <i class="bx bx-down-arrow-alt down"></i>
-                <span class="text">Down From Today</span>
-              </div>
+              <div class="number" id="last_week_sale">$0</div>
             </div>
-            <i class="bx bxs-cart-download cart four"></i>
           </div>
         </div>
 
         <div class="sales-boxes">
           <div class="recent-sales box">
             <div class="title">Recent Sales</div>
-            <div class="sales-details">
-              <ul class="details">
-                <li class="topic">Date</li>
-                <li><a href="#">02 Jan 2021</a></li>
-                <li><a href="#">02 Jan 2021</a></li>
-                <li><a href="#">02 Jan 2021</a></li>
-                <li><a href="#">02 Jan 2021</a></li>
-                <li><a href="#">02 Jan 2021</a></li>
-                <li><a href="#">02 Jan 2021</a></li>
-                <li><a href="#">02 Jan 2021</a></li>
-              </ul>
-              <ul class="details">
-                <li class="topic">Customer</li>
-                <li><a href="#">Alex Doe</a></li>
-                <li><a href="#">David Mart</a></li>
-                <li><a href="#">Roe Parter</a></li>
-                <li><a href="#">Diana Penty</a></li>
-                <li><a href="#">Martin Paw</a></li>
-                <li><a href="#">Doe Alex</a></li>
-                <li><a href="#">Aiana Lexa</a></li>
-                <li><a href="#">Rexel Mags</a></li>
-                <li><a href="#">Tiana Loths</a></li>
-              </ul>
-              <ul class="details">
-                <li class="topic">Sales</li>
-                <li><a href="#">Delivered</a></li>
-                <li><a href="#">Pending</a></li>
-                <li><a href="#">Returned</a></li>
-                <li><a href="#">Delivered</a></li>
-                <li><a href="#">Pending</a></li>
-                <li><a href="#">Returned</a></li>
-                <li><a href="#">Delivered</a></li>
-                <li><a href="#">Pending</a></li>
-                <li><a href="#">Delivered</a></li>
-              </ul>
-              <ul class="details">
-                <li class="topic">Total</li>
-                <li><a href="#">$204.98</a></li>
-                <li><a href="#">$24.55</a></li>
-                <li><a href="#">$25.88</a></li>
-                <li><a href="#">$170.66</a></li>
-                <li><a href="#">$56.56</a></li>
-                <li><a href="#">$44.95</a></li>
-                <li><a href="#">$67.33</a></li>
-                <li><a href="#">$23.53</a></li>
-                <li><a href="#">$46.52</a></li>
-              </ul>
-            </div>
-            <div class="button">
-              <a href="#">See All</a>
-            </div>
+            <table>
+              <thead>
+                <tr>
+                  <th colspan="2" style="text-align: center">Product</th>
+                  <th>Quantity</th>
+                  <th>Price</th>
+                  <th>Status</th>
+                  <th>Date</th>
+                  <th>Action</th>
+                </tr>
+              </thead>
+              <tbody id="sales_details"></tbody>
+            </table>
           </div>
           <div class="top-sales box">
             <div class="title">Top Seling Product</div>
-            <ul class="top-sales-details">
-              <li>
-                <a href="#">
-                  <img src="images/sunglasses.jpg" alt="" />
-                  <span class="product">Vuitton Sunglasses</span>
-                </a>
-                <span class="price">$1107</span>
-              </li>
-              <li>
-                <a href="#">
-                  <img src="images/jeans.jpg" alt="" />
-                  <span class="product">Hourglass Jeans </span>
-                </a>
-                <span class="price">$1567</span>
-              </li>
-              <li>
-                <a href="#">
-                  <img src="images/nike-min.jpg" alt="" />
-                  <span class="product">Nike Sport Shoe</span>
-                </a>
-                <span class="price">$1234</span>
-              </li>
-              <li>
-                <a href="#">
-                  <img src="images/scarves.jpg" alt="" />
-                  <span class="product">Hermes Silk Scarves.</span>
-                </a>
-                <span class="price">$2312</span>
-              </li>
-              <li>
-                <a href="#">
-                  <img src="images/blueBag.jpg" alt="" />
-                  <span class="product">Succi Ladies Bag</span>
-                </a>
-                <span class="price">$1456</span>
-              </li>
-              <li>
-                <a href="#">
-                  <img src="images/bag.jpg" alt="" />
-                  <span class="product">Gucci Womens's Bags</span>
-                </a>
-                <span class="price">$2345</span>
-              </li>
-
-              <li>
-                <a href="#">
-                  <img src="images/addidas.jpg" alt="" />
-                  <span class="product">Addidas Running Shoe</span>
-                </a>
-                <span class="price">$2345</span>
-              </li>
-              <li>
-                <a href="#">
-                  <img src="images/shirt.jpg" alt="" />
-                  <span class="product">Bilack Wear's Shirt</span>
-                </a>
-                <span class="price">$1245</span>
-              </li>
-            </ul>
+            <ul id="top_sales_details"></ul>
           </div>
         </div>
       </div>
     </section>
 
-    <script>
-      let sidebar = document.querySelector(".sidebar");
-      let sidebarBtn = document.querySelector(".sidebarBtn");
-      sidebarBtn.onclick = function () {
-        sidebar.classList.toggle("active");
-        if (sidebar.classList.contains("active")) {
-          sidebarBtn.classList.replace("bx-menu", "bx-menu-alt-right");
-        } else sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
-      };
-    </script>
+    <script src="B42_WEB_003_Web-Wizards/admin/js/admin.navbar.js"></script>
+    <script src="B42_WEB_003_Web-Wizards/admin/dashboard/js/dashboard.js"></script>
   </body>
 </html>
