Redirected from nav to user login page

--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
           <i class="ri-shopping-cart-line"></i>
           <i class="ri-notification-line"></i>
           <div class="hr"></div>
-          <div class="user">
-            <i class="ri-user-3-line"></i>
+          <        <a href="/B42_WEB_003_Web-Wizards/users/auth/userlogin.html"><i class="ri-user-3-line"></i></a>
           </div>
           <i class="ri-arrow-down-s-fill"></i>
         </div>
